fix home page from being off centered on mobile view

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -39,6 +39,10 @@ body {
   overflow-x: hidden;
   color: #fff;
   background-color: #000;
+
+  /* To stop the content on the landing page from being off center on mobile view */
+  position: sticky;
+  left: 0;
 }
 
 a {
